--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,7 @@ name = "network-algorithms"
 version = "0.1.0"
 edition = "2024"
 repository = "https://github.com/MitI-7/network-algorithms"
+
+
+[dependencies]
+num-traits = "0.2"
