--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ repository = "https://github.com/MitI-7/network-algorithms"
 [dependencies]
 num-traits = "0.2"
 rstest = "0.26"
+rstest_reuse = "0.7"
